Added Magick.Net package.

--- a/PhotoMetaData/PhotoMetaData/PhotoMetaData.csproj
+++ b/PhotoMetaData/PhotoMetaData/PhotoMetaData.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Magick.NET.Core" Version="11.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\Image\" />
+  </ItemGroup>
+
 </Project>
