--- a/PhotoMetaData/PhotoMetaData/PhotoMetaData.csproj
+++ b/PhotoMetaData/PhotoMetaData/PhotoMetaData.csproj
@@ -7,11 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Magick.NET.Core" Version="11.2.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\Image\" />
+    <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="11.2.1" />
   </ItemGroup>
 
 </Project>
